socklog (1.0.0-1) sarge; urgency=low

  * new upstream version, see /package/admin/socklog/package/CHANGES.
  * debian/preinst: use getent to check if user log exists.
  * debian/copyright: include upstream source url.

 -- Gerrit Pape <pape@smarden.org>  Thu, 30 Jan 2003 11:37:00 +0100

socklog (0.10.1-1) sarge; urgency=low

  * /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Thu,  8 Aug 2002 23:01:03 +0200

socklog (0.10.0-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Thu, 18 Jul 2002 15:59:23 +0200

socklog (0.9.1-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Wed, 26 Jun 2002 15:54:52 +0200

socklog (0.9.0-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Fri, 31 May 2002 14:33:48 +0200

socklog (0.8.2-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Sat, 18 May 2002 15:03:23 +0200

socklog (0.8.1-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Sun, 28 Apr 2002 10:41:34 +0200

socklog (0.8.0-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Sat, 27 Apr 2002 10:29:15 +0200

socklog (0.7.0-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Mon,  4 Feb 2002 11:37:13 +0100

socklog (0.6.1-2) woody; urgency=low

  * postinst: Use adduser ... --ingroup instead of --group which failed.

 -- Gerrit Pape <pape@smarden.org>  Fri, 25 Jan 2002 12:04:10 +0100

socklog (0.6.1-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Thu, 17 Jan 2002 11:43:36 +0100

socklog (0.6.0-1) woody; urgency=low

  * See /package/admin/socklog/package/CHANGES.
