@@ -91,24 +91,15 @@ binary-arch: build install
 #	dh_installdebconf	
 	dh_installdocs
 #	dh_installexamples
-#	dh_installmenu
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_installinit
-#	dh_installcron
 	dh_installman man/socklog-conf.8 man/socklog.8 man/tryto.1 man/uncat.1
-#	dh_installinfo
 #	dh_undocumented
 	dh_installchangelogs 
 	dh_link
-#	dh_strip
+	dh_strip
 	dh_compress
 #	dh_fixperms
 #	dh_makeshlibs
 	dh_installdeb
-#	dh_perl
 	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
